added some content to wireless.html for the website

--- a/website/project_1/hardware.html
+++ b/website/project_1/hardware.html
@@ -50,8 +50,7 @@ Released for free under a Creative Commons Attribution 2.5 License
 		
 			<h1 class="title">Motor Driver</h1>
 			<h1 class="title">Sonar</h1>
-			<h1 class="title">IR Sensor</h1>
-		
+			<h1 class="title">BlinkM LED</h1>		
 		</div>
 	</div>
 	<div id="sidebar">
