--- a/website/project_1/project1.html
+++ b/website/project_1/project1.html
@@ -48,14 +48,26 @@ Released for free under a Creative Commons Attribution 2.5 License
 
 			<p>In this initial project the main goal for our team is to become
 			familiar with the hardware and software environment that will be
-			required for further project work down the road. We will be using
+			required for further project work down the road. We will be using a gamepad,
 			sonar, dc motors, wireless radios and Arduino boards to create
 			a basic control system that will be modified and improved upon for
-			our final project.
+			our final project.</p>
 
 			<h1 class="title">Problem Description</h1>
 
-			<p>Project 1 involves making a rotating platform that will be able to sense and face walls or other obstacles that are placed in front of it. The platform should be able to be controlled by a USB PS2 controller as well as autonomously through the use of sensors and control logic. A remote base station will be constructed using an Arduino UNO board which will send wireless commands to another Arduino UNO board located on the platform. An Arduino ATMega board will also be onboard the platform and will be used to control the sensors and actuators responsible for platform movement.</p>	
+			<p>Project 1 involves making a rotating platform that will be able to sense and face walls or other obstacles that are placed in front of it. The platform should be able to be controlled by a USB PS2 controller as well as autonomously through the use of sensors and control logic. A remote base station will be constructed using an Arduino UNO board which will send wireless commands to another Arduino UNO board located on the platform. An Arduino Mega clone will also be onboard the platform and will be used to control the sensors and actuators responsible for platform movement.</p>
+
+			<h1 class="title">Chosen Solution</h1>
+
+			<p>An overview of our system is shown below</p>
+
+			<a href="../images/block_diagram1.png"><img src="../images/block_diagram1.png" width=500 height=300/></a>
+			<p>(Click for larger version)</p>
+			<h1 class="title">Chosen Solution</h1>
+
+			<p>Project 1
+
+			<img src="../images/block_diagram2.png" />
 		</div>
 	</div>
 	<div id="sidebar">
@@ -67,7 +79,7 @@ Released for free under a Creative Commons Attribution 2.5 License
 		<a href="platform.html">Platform Design</a><br />
 	</div>
 
-	
+
 	<!-- end content -->
 	<div style="clear: both;">&nbsp;</div>
 </div>
