--- a/website/project_1/project1.html
+++ b/website/project_1/project1.html
@@ -62,7 +62,7 @@ Released for free under a Creative Commons Attribution 2.5 License
 			<p>An overview of our system is shown below</p>
 
 			<a href="../images/block_diagram1.png"><img src="../images/block_diagram1.png" width=500 height=300/></a>
-			<p>(Click for larger version)</p>
+			<p>(<a href="../images/block_diagram1.png">Click for larger version</a>)</p>
 			<h1 class="title">Chosen Solution</h1>
 
 			<p>Project 1
