added demo video to project1.html

--- a/website/project_1/project1.html
+++ b/website/project_1/project1.html
@@ -68,6 +68,11 @@ Released for free under a Creative Commons Attribution 2.5 License
 			<p>Project 1
 
 			<img src="../images/block_diagram2.png" />
+		
+		
+			<h1 class="title">Demo</h1>
+			<iframe title="YouTube video player" width="640" height="390" src="http://www.youtube.com/embed/9MntPfPCy_w" frameborder="0" allowfullscreen></iframe>
+		
 		</div>
 	</div>
 	<div id="sidebar">
