--- a/website/project_1/gamepad.html
+++ b/website/project_1/gamepad.html
@@ -95,11 +95,13 @@ print $geshi->parse_code();
 	</div>
 	<div id="sidebar">
 		<h2>Project 1</h2>
+		<a href="project1.html">Overview</a><br />
 		<a href="software.html">Software Environment</a><br />
-		<a href="hardware.html">Hardware Overview</a><br />
+		<a href="hardware.html">Electronic Components</a><br />
+		<a href="communications.html">Communications</a><br />
 		<a href="gamepad.html">USB PS2 Gamepad</a><br />
-		<a href="wireless.html">Wireless Radio</a><br />
-		<a href="platform.html">Platform Design</a><br />
+		<a href="physical.html">Physical Layout</a><br />
+		<a href="discussion.html">Discussion</a><br />
 	</div>
 	<!-- end content -->
 	<div style="clear: both;">&nbsp;</div>
