sonar added to hardware. summary added to discussion.

--- a/website/project_1/project1.html
+++ b/website/project_1/project1.html
@@ -63,11 +63,27 @@ Released for free under a Creative Commons Attribution 2.5 License
 
 			<a href="../images/block_diagram1.png"><img src="../images/block_diagram1.png" width=500 height=300/></a>
 			<p>(<a href="../images/block_diagram1.png">Click for larger version</a>)</p>
-			<h1 class="title">Chosen Solution</h1>
-
-			<p>Project 1
-
-			<img src="../images/block_diagram2.png" />
+			<h1 class="title">Accomplishments</h1>
+			<p>
+			<ul type="square">
+				<li>Successfully communicated between gamepad, computer, Arduino UNO, and wireless radio</li>
+				<li>I2C and SPI communication with BlinkM and radio</li>
+				<li>UART full-duplex connection between Arduino Mega and UNO</li>
+				<li>High-frequency PWM control of fans</li>
+				<li>Responsive, stiff, lightweight platform</li>
+				<li>Robust interrupt-driven sonar software</li>
+				<li>Emergency cutoff switch for motor commands and high voltage circuitry</li>
+			</ul>
+			</p>
+			
+			<h1 class="title">Future Steps</h1>
+			<p>
+			<ul type="square">
+				<li>Autonomous control loop</li>
+				<li>Sonar noise filter</li>
+				<li>Motor "deadzone" mapping to maximize useful range</li>
+			</ul>
+			</p>
 		
 		
 			<h1 class="title">Demo</h1>
