added code snippet to hardware.html, changed communication header and finished software.html

--- a/website/project_1/software.html
+++ b/website/project_1/software.html
@@ -61,7 +61,7 @@ Released for free under a Creative Commons Attribution 2.5 License
 			</p>
 
 			<h1 class="title">AVR Dude and AVR-GCC</h1>
-			<p>Discuss the other tools that are needed for the environment
+			<p>In order to program the Atmel microcontroller's eeprom and flash memory the program AVR Dude is used. It is part of a suite of executables that are installed for the development environment. AVR-GCC is another part of that environment providing a cross compiler, debugger and other open source tools needed for development on the AVR platform. Eclipse has plugins that integrate AVR Dude and AVR-GCC tools into the IDE which allow AVR projects to be built and transferred to the Arduino hardware.
 			</p>
 
 
@@ -98,9 +98,6 @@ Released for free under a Creative Commons Attribution 2.5 License
 			will be using the MAC environment as the AVRDude version seems to 
 			work better than the version on the lab WINDOWS machines.
 			</p>
-
-
-
 
 		</div>
 	</div>
