could not escape quotes in code, removed

--- a/website/project_1/hardware.html
+++ b/website/project_1/hardware.html
@@ -81,15 +81,15 @@ Released for free under a Creative Commons Attribution 2.5 License
 <div class="code">			
 <?php
 include_once '../includes/geshi.php';
-$source='Wire.begin();
-
-	Wire.beginTransmission(0x09);
-	Wire.send('''o''');
-	Wire.send('''n''');
-	Wire.send(0xff);
-	Wire.send(0x66);
-	Wire.send(0x00);
-	Wire.endTransmission();';	
+$source='
+Wire.begin();
+Wire.beginTransmission(0x09);
+Wire.send(o);
+Wire.send(n);
+Wire.send(0xff);
+Wire.send(0x66);
+Wire.send(0x00);
+Wire.endTransmission();';	
 $geshi = new GeSHi($source, 'c');
 $geshi->enable_line_numbers(GESHI_NORMAL_LINE_NUMBERS);
 print $geshi->parse_code();
