--- a/website/project_1/software.html
+++ b/website/project_1/software.html
@@ -61,12 +61,12 @@ Released for free under a Creative Commons Attribution 2.5 License
 			be using Eclipse for most of our developping.
 			</p>
 
-			<h1 class="title">AVR Dude and AVR-GCC</h1>
+			<h2>AVR Dude and AVR-GCC</h2>
 			<p>In order to program the Atmel microcontroller's eeprom and flash memory the program AVR Dude is used. It is part of a suite of executables that are installed for the development environment. AVR-GCC is another part of that environment providing a cross compiler, debugger and other open source tools needed for development on the AVR platform. Eclipse has plugins that integrate AVR Dude and AVR-GCC tools into the IDE which allow AVR projects to be built and transferred to the Arduino hardware.
 			</p>
 
 
-			<h1 class="title">Eclipse</h1>
+			<h2>Eclipse</h2>
 			<p>Setting up Eclipse for Arduino was fairly straight
 			forward since the lab TA had a nice tutorial on his web page. It
 			does take a while to set up a project and begin coding. The hope
@@ -79,7 +79,7 @@ Released for free under a Creative Commons Attribution 2.5 License
 			into eclipse from the local file system.
 			</p>
 
-			<h1 class="title">Major Issues with Eclipse</h1>
+			<h2>Major Issues with Eclipse</h2>
 			<p>Once our three basic C++ projects were created (one for
 			each of the three Arduino boards we are using) we were ready
 			to start coding and sharing the projects amongst the three of
