--- a/website/project_1/software.html
+++ b/website/project_1/software.html
@@ -45,7 +45,7 @@ Released for free under a Creative Commons Attribution 2.5 License
 			<h1 class="title">Software Environment</h1>
 			<p>This section discusses the development environment we used and encountered issues.
 			</p>
-			<h1 class="title">Basic Arduino IDE</h1>
+			<h2>Basic Arduino IDE</h2>
 			<p>When first starting Arduino programming, the integrated
 			development environment (IDE) makes creating a "sketch" of code
 			very easy. Even if someone has never programmed before, following
