--- a/website/project_1/software.html
+++ b/website/project_1/software.html
@@ -54,11 +54,11 @@ Released for free under a Creative Commons Attribution 2.5 License
 			</p>
 
 			<p>There is a lot of abstraction when using the provided IDE
-			however, and a lot of things are going on behind the scenes that
+			and a lot of things are going on behind the scenes that
 			are not visible to the developer. Due to the nature of this
 			project, using the IDE will not provide the depth that we will
 			need to accomplish some lower level tasks. For this reason we will
-			be using Eclipse for most of our developping.
+			be using Eclipse for most of our developing.
 			</p>
 
 			<h2>AVR Dude and AVR-GCC</h2>
@@ -69,7 +69,7 @@ Released for free under a Creative Commons Attribution 2.5 License
 			<h2>Eclipse</h2>
 			<p>Setting up Eclipse for Arduino was fairly straight
 			forward since the lab TA had a nice tutorial on his web page. It
-			does take a while to set up a project and begin coding. The hope
+			does take a while to set up a project and begin coding though. The hope
 			is that it will save time in the long run, but only time will tell.
 			We have set up a Subversion repository to host our source code, but
 			could not get the Eclipse subversion plugin to work correctly.
@@ -83,7 +83,7 @@ Released for free under a Creative Commons Attribution 2.5 License
 			<p>Once our three basic C++ projects were created (one for
 			each of the three Arduino boards we are using) we were ready
 			to start coding and sharing the projects amongst the three of
-			us. We soon found out that some of the files were including, namely
+			us. We soon found out that some of the files we are including, namely
 			a library .a file (lib.a) that was compiled by the Arduino IDE, were
 			not necessary. Due to the nature of embedded programming and the
 			limited storage on the boards, we wanted to keep the code overhead
@@ -93,11 +93,11 @@ Released for free under a Creative Commons Attribution 2.5 License
 			<p>We began working with Eclipse and including core
 			header and source files and excluding the library file. It seemed to
 			work on the lab machine without the library file, but would not work
-			on the MAC Eclipse environment. Some of the projects would work
+			on the Macintosh Eclipse environment. Some of the projects would work
 			with the ATMega board, but would not work with the UNO boards. We
 			are including the library files for projects on the UNO boards and
-			will be using the MAC environment as the AVRDude version seems to
-			work better than the version on the lab WINDOWS machines.
+			will be using the Macintosh environment as the AVRDude version seems to
+			work better than the version on the lab Windows machines.
 			</p>
 
 		</div>
