--- a/website/project_1/discussion.html
+++ b/website/project_1/discussion.html
@@ -53,7 +53,7 @@ Released for free under a Creative Commons Attribution 2.5 License
 			</p>
 
 			<h1 class="title">Autopilot</h1>
-			<p>The control loop for autopilot was not finished for the deadline of project 1. However, almost everything was implemented with the exception of the motor deadzone. Since autonomous control was not a priority for projects 1 or 2, a simple proportional controller would have been implemented. It would run at a defined time interval probably somewhere between 1 and 10 Hz. The faster loop would respond better in theory, but is also more difficult to model because time delays from receiving wireless packets or receiving UART packets could add nonlinearties in the system.
+			<p>The control loop for autopilot was not finished for the deadline of project 1. However, almost everything was implemented with the exception of the motor deadzone. Since autonomous control was not a priority for projects 1 or 2, a simple proportional controller would have been implemented. It would run at a defined time interval probably somewhere between 1 and 10 Hz. The faster loop would respond better in theory, but is also more difficult to model because time delays from receiving wireless packets or receiving UART packets could add nonlinearities in the system.
 
 			Another issue is the sonar resolution. They are limited to 1 inch and this sets an angular resloution on wall following. The image below explains that the angular reslution 'a' and is calculated by arctan(1/d) where 'd' is seperation distance in inches. In our platform, 'd' is 10 inches, so the angular reslution is 5.7 degrees. This should be improved or at least considered in future projects. </p>
 
