added includes folder for website with php files for header and sidebar

--- a/website/index.html
+++ b/website/index.html
@@ -23,19 +23,8 @@ Released for free under a Creative Commons Attribution 2.5 License
 	</h1>
 </div>
 
+<?php include('includes/header.php'); ?>
 
-<div id="header">
-	<div id="menu">
-		<ul>
-			<li class="current_page_item"><a href="index.html">Homepage</a></li>
-			<li><a href="./project_1/project1.html">Project 1</a></li>
-			<li><a href="./project_2/project2.html">Project 2</a></li>
-			<li><a href="./project_3/project3.html">Project 3</a></li>
-			<li><a href="contact.html">Contact</a></li>
-		</ul>
-	</div>
-</div>
-<!-- end header -->
 </div>
 <!-- start page -->
 <div id="page">
