added correct path to sidebar.php

--- a/website/project_1/project1.html
+++ b/website/project_1/project1.html
@@ -92,7 +92,7 @@ Released for free under a Creative Commons Attribution 2.5 License
 		</div>
 	</div>
 	
-	<?php include('includes/sidebar.php'); ?>
+	<?php include('../includes/sidebar.php'); ?>
 
 	<!-- end content -->
 	<div style="clear: both;">&nbsp;</div>
