--- a/website/project_1/communications.html
+++ b/website/project_1/communications.html
@@ -1,42 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<!--
+<?php include('../includes/header.php'); ?>
 
-Design by Free CSS Templates
-http://www.freecsstemplates.org
-Released for free under a Creative Commons Attribution 2.5 License
--->
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<title>SEng 466 Project Page</title>
-<meta name="keywords" content="" />
-<meta name="description" content="" />
-<link href="../default.css" rel="stylesheet" type="text/css" />
-</head>
-<body>
-<div id="wrapper">
-<!-- start header -->
-
-<div id="logo">
-	<h1>
-	SEng 466 - Software for Embedded and Mechatronics Systems
-	</h1>
-</div>
-
-
-<div id="header">
-	<div id="menu">
-		<ul>
-			<li class="current_page_item"><a href="../index.html">Homepage</a></li>
-			<li><a href="project1.html">Project 1</a></li>
-			<li><a href="../project_2/project2.html">Project 2</a></li>
-			<li><a href="../project_3/project3.html">Project 3</a></li>
-			<li><a href="../contact.html">Contact</a></li>
-		</ul>
-	</div>
-</div>
-<!-- end header -->
-</div>
 <!-- start page -->
 <div id="page">
 	<!-- start content -->
@@ -120,22 +83,12 @@ echo $geshi->parse_code();
 		<p>The worst case scenario is if the start of the UART buffer contains the second preamble byte but not the first. In that case, the function is called size+2 times before a packet is correctly received.
 
 		The preamble code was a recent addition because during one branch of our project, one arduino was sending data as fast as it could to the other arduino. This would mean that while UARTreceive is running, the buffer was actively being filled. Then, when the buffer is flushed, the start of the buffer is out of sync. This wasn't an issue before because we were sending packets every 100 ms which is slow enough that the buffer was never flushed mid-packet.</p>
-  </div>
-</div>
 
-	<div id="sidebar">
-		<h2>Project 1</h2>
-		<a href="project1.html">Overview</a><br />
-		<a href="software.html">Software Environment</a><br />
-		<a href="hardware.html">Electronic Components</a><br />
-		<a href="communications.html">Communications</a><br />
-		<a href="gamepad.html">USB PS2 Gamepad</a><br />
-		<a href="physical.html">Physical Layout</a><br />
-		<a href="discussion.html">Discussion</a><br />
-	</div>
-	<!-- end content -->
-	<div style="clear: both;">&nbsp;</div>
-</div>
+<?php include('../includes/sidebar.php'); ?>
+
+<!-- end content -->
+<div style="clear: both;">&nbsp;</div>
 <!-- end page -->
+</div>
 </body>
 </html>
