added skirt.html and platform.html to project 2 website

--- a/website/project_2/project2.html
+++ b/website/project_2/project2.html
@@ -27,21 +27,21 @@ Released for free under a Creative Commons Attribution 2.5 License
 			<h1 class="title">Project 2</h1>
 			
 			<h1 class="title">Project Objectives</h1>
-			<p>
-			For this phase of the course we will be designing and building a hovercraft that will be controlled manually by a gamepad connected to a base station. We will be instrumenting our designs to ensure that our chosen hovercraft will meet the requirements for project 3.
-			</p>
+			<p>For this phase of the course we will be designing and building a hovercraft that will be controlled manually by a gamepad connected to a base station. We will be instrumenting our designs to ensure that our chosen hovercraft will meet the requirements for project 3.</p>
 			
 			<h1 class="title">Problem Description</h1>
-			The hovercraft needs to be rigid and light so that it can be maneuvered with a maximum payload of 1.5 Kgs. The lifting motors should not exceed a load of 5 Amps at 7.2V (40 Watts) and can be controlled either variably through the use of a MOSFET driver or constantly by directly connecting it to a power supply. To characterize the physical limitations of the final design the craft should be instrumented. Knowing these limitations will ease the final task of creating an autonomous hovercraft required for project 3. 
+			<p>The hovercraft needs to be rigid and light so that it can be maneuvered with a maximum payload of 1.5 Kgs. The lifting motors should not exceed a load of 5 Amps at 7.2V (40 Watts) and can be controlled either variably through the use of a MOSFET driver or constantly by directly connecting it to a power supply. To characterize the physical limitations of the final design the craft should be instrumented. Knowing these limitations will ease the final task of creating an autonomous hovercraft required for project 3. </p>
 		
 		</div>
 	</div>
+
+	<?php include('sidebar.php'); ?>
+
 	<!-- end content -->
 	<div style="clear: both;">&nbsp;</div>
 </div>
 <!-- end page -->
 
-<?php include('../includes/sidebar.php'); ?>
 
 </body>
 </html>
