added demo video to project 2 for the website

--- a/website/project_2/project2.html
+++ b/website/project_2/project2.html
@@ -32,6 +32,8 @@ Released for free under a Creative Commons Attribution 2.5 License
 			<h1 class="title">Problem Description</h1>
 			<p>The hovercraft needs to be rigid and light so that it can be maneuvered with a maximum payload of 1.5 Kgs. The lifting motors should not exceed a load of 5 Amps at 7.2V (40 Watts) and can be controlled either variably through the use of a MOSFET driver or constantly by directly connecting it to a power supply. To characterize the physical limitations of the final design the craft should be instrumented. Knowing these limitations will ease the final task of creating an autonomous hovercraft required for project 3. </p>
 		
+		
+		<object width="425" height="344"><param name="movie" value="http://www.youtube.com/v/q6Iv0nLJtT0?hl=en&fs=1"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="http://www.youtube.com/v/q6Iv0nLJtT0?hl=en&fs=1" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="425" height="344"></embed></object>
 		</div>
 	</div>
 
